# CILiner

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-llvm.sh  build.sh  preprocessing.sh
dataset/: README.md
impact/llvm_mode/: Makefile  afl-llvm-pass.so.cc
impact/static_analysis/: cfg.cpp  cfg.h  dfg.cpp  dfg.h  main.cpp  module_parse.cpp  module_parse.h  sdg.cpp  sdg.h
libclang/: build-llvm.sh
py_script/: README.md  analyzer.py  code_count.py  run.py
py_script/DG/: autocompile.py  combine.py  run.py
py_script/crawler/: build_analysis.py  complex_analysis.py  crawler.py  git_repo_crawler.py
py_script/frama-c/: frama_command.py
py_script/sympas/: autocompile.py  combine.py  run.py
